fixup! Add options for Java9 runtime It brings some required modules that are not exposed by default (javax.* classes are turned off by default)
Change-Id: I
Signed-off-by: Florent BENOIT <fbenoit@redhat.com>